[package]
name = "all-token-tracker-substream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
ethabi = "17.0"
hex-literal = "0.3.4"
prost = "0.11.0"
# Use latest from https://crates.io/crates/substreams
substreams = "0.0.21"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.2.2-rc.2"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.2.2-rc.2"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"